2007-08-28  Tim-Philipp Müller  <tim at centricular dot net>

	* browser-plugin/totem-plugin-viewer.c:
	  Fix compile.

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-smil.c: (parse_smil_entry): Add
	support for the author, "dur", "clip-begin", abstract, and copyright
	attributes of SMIL (Closes: #470875)

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	Add SetVolume function

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_play),
	(totem_embedded_set_volume), (property_notify_cb_volume):
	Return an error if _play doesn't a URI to chew on,
	implement _set_volume()

	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Implement SetVolume in the
	base class and in the Complex plugin, Implement SetSource
	in the Complex plugin and make SetSrc in the base class
	request the stream (Helps: #470876)

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-pls.c:
	(totem_pl_parser_add_pls_with_contents): Don't try to parse
	entries that have -1 as the length, it means they've been
	tagged as streams (Closes: #437934)
	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entries):
	Minor cleanup, the new XML parser is case-unsensitive

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry):
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_init):
	* src/plparse/totem-pl-parser.h: Add support for the abstract,
	copyright, author and moreinfo properties for ASX playlists
	(Closes: #469576)

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-qt.c:
	(totem_pl_parser_add_quicktime_metalink): Add support
	for the autoplay property

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (on_play_pause),
	(popup_menu_position_func), (popup_menu_over_arrow),