@@ -7,6 +7,7 @@ application/x-extension-mp4
 application/x-flac
 application/x-flash-video
 application/x-matroska
+application/x-netshow-channel
 application/x-ogg
 application/x-quicktime-media-link
 application/x-quicktimeplayer
