@@ -97,10 +97,9 @@ totem_pl_parser_add_asf_parser (TotemPlParser *parser,
 	char *contents, *ref;
 	int size;
 
-	if (g_str_has_prefix (data, "[Address]") != FALSE) {
-		g_warning ("Implement NSC parsing: http://bugzilla.gnome.org/show_bug.cgi?id=350595");
-		return TOTEM_PL_PARSER_RESULT_ERROR;
-	}
+	/* NSC files are handled directly by GStreamer */
+	if (g_str_has_prefix (data, "[Address]") != FALSE)
+		return TOTEM_PL_PARSER_RESULT_UNHANDLED;
 
 	if (g_str_has_prefix (data, "ASF ") == FALSE) {
 		return totem_pl_parser_add_asf_reference_parser (parser, url, base, data);
